# SpecialKanren

./: .gitignore  LICENSE  Makefile  README.md  SpecialKanren.opam  dune-project
.github/workflows/: push.yml
lib/: assert.ml  canren.ml  config.ml  dnf.ml  dnf_past.ml  dune  fun.ml  global.ml  local.ml  names_resolve.ml  ocanren_patterns.ml  outer.ml  outer.mli  patterns.ml  predicate.ml  predicate.mli  semant.ml  sexn.ml  spec.ml  sresult.ml  translate.ml  translator.ml  translator.mli  tree.ml  typespat.ml  validate.ml  value.ml
report/: 000intro.tex  010task.tex  020related.tex  040method.tex  070experiment.tex  090conclusion.tex  header.tex  matmex-diploma-custom.cls  title.tex  vkr.bib  vkr.tex
samples/: GCW.ml  bridge.ml  dune  eq.ml  false_and_true.ml  id.ml  is_even.ml  is_false.ml  is_true.ml  is_zero.ml  le.ml  multiarg.ml  nat.ml  neq.ml  open.ml  rec_call.ml  self_call.ml  sub.ml  subs.ml  twinscall.ml
samples/is_none/: dune  is_none_run.ml  run.t
samples/nat/: dune  nat.ml
test/: dune  translator.ml
test/GCW/: bench.ml  code.t  dune  run.ml  run.t
test/bridge/: bench.ml  code.t  dune  run.ml  run.t
test/forall/: code.t  dune  run.ml  run.t
test/hd/: code.t  dune  run.ml  run.t
test/id_external/: code.t  dune  run.t
test/is_even/: bench.ml  code.t  dune  run.ml  run.t
test/is_none/: code.t  dune  run.ml  run.t
test/is_zero/: code.t  dune  run.ml  run.t
test/le/: code.t  dune  run.ml  run.t
test/multiarg/: code.t  dune
test/self_call/: code.t  dune  run.ml
test/sub/: bench.ml  code.t  dune  run.ml  run.t
test/twinscall/: code.t  dune
test/value/: code.t  dune  run.ml  run.t
tests/GCW.t/: code.t  dune  run.t  src.ml
tests/forall/: code.t  dune  src.ml
tests/hd/: code.t  dune  src.ml
tests/id_external/: code.t  run.t
tests/id_external/is_even/: src.ml
tests/is_even/: bench.ml  code.t  dune  run.ml  run.t  src.ml
tests/is_none/: code.t  dune  is_none.src.ml  is_none_run.ml  run.t
tests/is_none_td/: dune  run.ml  src.ml
tests/is_zero/: code.t  dune
tests/le/: code.t  dune  le.src.ml  le_run.ml  run.ml  run.t
tests/multiarg/: code.t  dune
tests/multivar/: code.t  dune  run.ml  src.ml
tests/self_call/: dune
tests/sub/: bench.ml  code.t  dune  run.ml  run.t
tests/twins/: code.t  dune  run.t  src.ml
tests/value/: code.t  dune  run.ml  run.t  value_run.ml  value_src.ml
