(library
 (libraries base core compiler-libs.common OCanren)
 (modules
  Sexn
  Assert
  Local
  Patterns
  Outer
  Ocanren_patterns
  Predicate
  Typespat
  Validate
  Canren
  Dnf
  Global
  Value
  Dnf_past
  fun
  translate)
 (name SpecialKanren)
 (preprocess
  (pps ppxlib.metaquot ppx_optcomp)))
