(executable
 (name le)
 (modules le)
 (libraries OCanren)
 (flags
  (:standard -rectypes -dtypedtree -bin-annot -w -32)))

(executable
 (name eq)
 (modules eq)
 (libraries OCanren)
 (flags
  (:standard -rectypes -bin-annot -w -32)))

(executable
 (name false_and_true)
 (modules false_and_true)
 (libraries OCanren)
 (flags
  (:standard -rectypes -bin-annot -w -32)))
