(env
 (_
  (flags
   (:standard -rectypes -w -27-33-32-39))))

(rule
 (deps
  (:exec %{project_root}/bin/main.exe)
  %{cmo:../../samples/forall})
 (target target.ml)
 (action
  (run
   sh
   -c
   "%{exec} -cmt -par res -fname for_allo -o %{target} ../../samples/.Samples.objs/byte/forall.cmt")))

(executable
 (name run)
 (libraries GT OCanren)
 (modules run target))

(cram
 (deps
  ./run.exe
  (package SpecialKanren)))
