(env
 (_
  (flags
   (:standard -rectypes -w -27-33-32-39))))

(rule
 (deps
  (:exec %{project_root}/bin/main.exe)
  %{cmo:../../samples/id_external})
 (target target.ml)
 (action
  (run
   sh
   -c
   "%{exec} -cmt -par flag -fname id -o %{target} ../../samples/.Samples.objs/byte/id_external.cmt")))

(executable
 (name run)
 (libraries GT OCanren)
 (modules run target))

(cram
 (deps ./run.exe))
