(env
 (_
  (flags
   (:standard -rectypes -w -27-33-32-39))))

(rule
 (deps
  (:exec %{project_root}/bin/main.exe)
  %{cmo:../../samples/id_external})
 (target target.ml)
 (mode
  (promote (until-clean)))
 (action
  (progn
   (run
    sh
    -c
    "%{exec} -cmt -par flag -fname id -o %{target} ../../samples/.Samples.objs/byte/id_external.cmt")
   (run
    sh
    -c
    "ocamlformat --enable-outside-detected-project -o %{target} ./%{target} "))))

(cram
 (package SpecialKanren)
 (deps target.ml))
