(env
 (_
  (flags
   (:standard -rectypes -w -27-33-32-39))))

(rule
 (deps
  (:exec %{project_root}/bin/main.exe)
  %{cmo:../../samples/is_even})
 (target target.ml)
 (mode
  (promote (until-clean)))
 (action
  (progn
   (run
    sh
    -c
    "%{exec} -cmt -par res -fname is_even -o %{target} ../../samples/.Samples.objs/byte/is_even.cmt")
   (run
    sh
    -c
    "ocamlformat --enable-outside-detected-project -o %{target} ./%{target} "))))

(executable
 (name run)
 (libraries GT OCanren OCanren.tester)
 (modules run target)
 (preprocess
  (pps
   OCanren-ppx.ppx_repr
   OCanren-ppx.ppx_fresh
   OCanren-ppx.ppx_distrib
   -new-typenames
   GT.ppx_all)))

(rule
 (deps
  (:exec %{project_root}/bin/main.exe)
  %{cmo:../../samples/is_even})
 (target target_bench.ml)
 (mode
  (promote (until-clean)))
 (action
  (progn
   (run
    sh
    -c
    "%{exec} -cmt -par res -fname is_even -o %{target} ../../samples/.Samples.objs/byte/is_even.cmt")
   (run
    sh
    -c
    "ocamlformat --enable-outside-detected-project -o %{target} ./%{target} "))))

(executable
 (public_name is_even_bench)
 (name bench)
 (libraries GT OCanren OCanren.tester core benchmark)
 (modules bench target_bench))

(cram
 (deps
  target.ml
  ./run.exe
  (package SpecialKanren)))
