(env
 (_
  (flags
   (:standard -rectypes -w -27-33-32-39))))

(rule
 (deps
  (:exec %{project_root}/bin/main.exe)
  %{cmo:../../samples/le})
 (target target.ml)
 (action
  (run
   sh
   -c
   "%{exec} -cmt -par is -fname le -o %{target} ../../samples/.Samples.objs/byte/le.cmt")))

(executable
 (name run)
 (libraries GT OCanren)
 (modules run target))

(cram
 (deps
  ./run.exe
  (package SpecialKanren)))
