(env
 (_
  (flags
   (:standard -rectypes -w -27-33-32-39))))

(rule
 (deps
  (:exec %{project_root}/bin/main.exe)
  %{cmo:../../samples/multiarg})
 (target target.ml)
 (mode
  (promote (until-clean)))
 (action
  (progn
   (run
    sh
    -c
    "%{exec} -cmt -par is -fname rel -o %{target} ../../samples/.Samples.objs/byte/multiarg.cmt")
   (run
    sh
    -c
    "ocamlformat --enable-outside-detected-project -o %{target} ./%{target} "))))

(executable
 (name run)
 (libraries GT OCanren)
 (modules run target))

(cram
 (deps
  ./run.exe
  target.ml
  (package SpecialKanren)))
