(env
 (_
  (flags
   (:standard -rectypes -w -27-33-32-39))))

(rule
 (deps
  (:exec %{project_root}/bin/main.exe)
  %{cmo:../../samples/self_call})
 (target target.ml)
 (action
  (run
   sh
   -c
   "%{exec} -cmt -par is -fname self1 -o %{target} ../../samples/.Samples.objs/byte/self_call.cmt")))

(executable
 (name run)
 (libraries GT OCanren)
 (modules run target))

(cram
 (deps
  ./run.exe
  (package SpecialKanren)))
