(env
 (_
  (flags
   (:standard -rectypes -w -27-33-32-39))))

(rule
 (deps
  (:exec %{project_root}/bin/main.exe)
  %{cmo:../../samples/sub})
 (target target.ml)
 (action
  (run
   sh
   -c
   "%{exec} -cmt -par z -fname sub -o %{target} ../../samples/.Samples.objs/byte/sub.cmt")))

(executable
 (name run)
 (libraries GT OCanren)
 (modules run target))

(rule
 (deps
  (:exec %{project_root}/bin/main.exe)
  %{cmo:../../samples/sub})
 (target target_bench.ml)
 (action
  (run
   sh
   -c
   "%{exec} -cmt -par z -fname sub -o %{target} ../../samples/.Samples.objs/byte/sub.cmt")))

(executable
 (public_name sub_bench)
 (name bench)
 (libraries GT OCanren benchmark base core)
 (modules bench target_bench))

(cram
 (deps
  target.ml
  ./run.exe
  (package SpecialKanren)))
