(env
 (_
  (flags
   (:standard -rectypes -w -27-33-32-39))))

(rule
 (deps
  (:exec %{project_root}/bin/main.exe)
  %{cmo:../../samples/twinscall})
 (target target.ml)
 (mode
  (promote (until-clean)))
 (action
  (progn
   (run
    sh
    -c
    "%{exec} -cmt -par is -fname twins -o %{target} ../../samples/.Samples.objs/byte/twinscall.cmt")
   (run
    sh
    -c
    "ocamlformat --enable-outside-detected-project -o %{target} ./%{target} "))))

(executable
 (name target)
 (libraries GT OCanren)
 (modules target))

(cram
 (deps
  target.ml
  (package SpecialKanren)))
