(env
 (_
  (flags
   (:standard -rectypes -w -27-33-32-39))))

(rule
 (deps
  (:exec %{project_root}/bin/main.exe)
  %{cmo:../../samples/value})
 (target target.ml)
 (action
  (run
   sh
   -c
   "%{exec} -cmt -par opt -fname value -o %{target} ../../samples/.Samples.objs/byte/value.cmt")))

(executable
 (name run)
 (libraries GT OCanren)
 (modules run target))

(cram
 (deps
  ./run.exe
  (package SpecialKanren)))
