(env
 (_
  (flags
   (:standard -rectypes -w -27-33-32-39))))

(rule
 (targets target.ml)
 (deps
  (:exec %{project_root}/bin/main.exe)
  (:input src.ml))
 (action
  (run sh -c "%{exec} -ml -par res -fname is_even -o %{targets} %{input}")))

(executable
 (name run)
 (libraries GT OCanren)
 (modules run target))

(rule
 (targets target_bench.ml)
 (deps
  (:exec %{project_root}/bin/main.exe)
  (:input src.ml))
 (action
  (run sh -c "%{exec} -ml -par res -fname is_even -o %{targets} %{input}")))

(executable
 (public_name is_even_bench)
 (name bench)
 (libraries GT core OCanren benchmark)
 (modules target_bench bench))

(cram
 (deps
  target.ml
  ./run.exe
  src.ml
  (package SpecialKanren)))
