(env
 (_
  (flags
   (:standard -rectypes -w -27-33-32-39))))

(rule
 (targets is_none.ml)
 (deps
  (:exec %{project_root}/bin/main.exe)
  (:input is_none.src.ml))
 (action
  (run sh -c "%{exec} -ml -par opt -fname is_none -o %{targets} %{input}")))

(executable
 (name is_none_run)
 (libraries GT OCanren)
 (modules is_none is_none_run))

(cram
 (deps
  ./is_none_run.exe
  is_none.src.ml
  (package SpecialKanren)))
