(env
 (_
  (flags
   (:standard -rectypes -w -27-33-32-39))))

(rule
 (targets target.ml)
 (deps
  (:exec %{project_root}/bin/main.exe)
  (:input src.ml))
 (action
  (run sh -c "%{exec} -ml -par num -fname is_zero -o %{targets} %{input}")))

(executable
 (name run)
 (libraries GT OCanren)
 (modules src run))

(cram
 (deps
  ./run.exe
  src.ml
  (package SpecialKanren)))
