(env
 (_
  (flags
   (:standard -rectypes -w -27-33-32-39))))

(rule
 (targets le.ml)
 (deps
  (:exec %{project_root}/bin/main.exe)
  (:input le.src.ml))
 (action
  (run sh -c "%{exec} -ml -par is -fname le -o %{targets} %{input}")))

(executable
 (name le_run)
 (libraries GT OCanren)
 (modules le le_run))

(cram
 (deps ./le_run.exe))
