(env
 (_
  (flags
   (:standard -rectypes -w -27-33-32-39))))

(rule
 (targets le.ml)
 (deps
  (:exec %{project_root}/bin/main.exe)
  (:input src.ml))
 (action
  (run sh -c "%{exec} -ml -par is -fname le -o %{targets} %{input}")))

(executable
 (name run)
 (libraries GT OCanren)
 (modules le run))

(cram
 (deps
  ./run.exe
  src.ml
  (package SpecialKanren)))
