(env
 (_
  (flags
   (:standard -rectypes -w -27-33-32-39))))

(rule
 (targets is_even.ml)
 (deps
  (:exec %{project_root}/bin/main.exe)
  (:input src.ml))
 (action
  (run sh -c "%{exec} -ml -par z -fname sub -o %{targets} %{input}")))

(executable
 (name run)
 (libraries GT OCanren)
 (modules src run is_even))

(cram
 (deps is_even.ml ./run.exe src.ml))
