(env
 (_
  (flags
   (:standard -rectypes -w -27-33-32-39))))

; (rule
;  (targets target.ml)
;  (deps
;   (:exec %{project_root}/bin/main.exe) TODO
;   (:input src.ml))
;  (action
;   (run sh -c "%{exec} -ml -par is -fname twins -o %{targets} %{input}")))

(executable
 (name run)
 (libraries GT OCanren)
 (modules
  src
  run
  ; target
  ))

(cram
 (deps
  ; target.ml
  ; ./run.exe
  src.ml
  (package SpecialKanren)))
