(env
 (_
  (flags
   (:standard -rectypes -w -27-33-32-39))))

(rule
 (targets value.ml)
 (deps
  (:exec %{project_root}/bin/main.exe)
  (:input value_src.ml))
 (action
  (run sh -c "%{exec} -ml -par opt -fname value -o %{targets} %{input}")))

(executable
 (name value_run)
 (libraries GT OCanren)
 (modules value_run))

(cram
 (deps ./value_run.exe value_src.ml))
