(env
 (_
  (flags
   (:standard -rectypes -w -27-33-32-39))))

(rule
 (targets value.ml)
 (deps
  (:exec %{project_root}/bin/main.exe)
  (:input src.ml))
 (action
  (run sh -c "%{exec} -ml -par opt -fname value -o %{targets} %{input}")))

(executable
 (name run)
 (libraries GT OCanren)
 (modules run value))

(cram
 (deps ./run.exe src.ml))
